# osync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  flake.nix  path_resolver.py  pyproject.toml
src/osync/: __init__.py  cli.py  command_builder.py  file_pattern.py  file_patterns_builder.py  filter_group.py  findup.py  path_resolver.py  rsync.py  test_cli.py  test_command_builder.py  test_file_pattern.py  test_file_patterns.py  test_file_patterns_builder.py  test_findup.py  test_path_resolver.py  test_rsync.py
tests/: tests.py
